# openweather-fastapi

./: pyproject.toml
src/: main.py
src/infrastructure/: memory_cache.py
src/infrastructure/cache/: weather.py
src/routers/: weather.py
src/schemas/: weather.py
src/services/: weather.py
src/utils/: error_handling.py  result.py  settings.py
