[tool.poetry]
name = "gif-expert-app"
version = "0.1.0"
description = ""
authors = ["César Castañón <cesar.castares@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.67.0"
uvicorn = "^0.14.0"
httpx = "^0.18.2"
python-dotenv = "^0.19.0"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
